--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
     "test": "jest",
-    "test:watch": "yarn test --watch"
+    "test:watch": "yarn test --watch",
+    "storybook": "start-storybook -s ./public -p 6006",
+    "build-storybook": "build-storybook"
   },
   "husky": {
     "hooks": {
@@ -28,7 +30,13 @@
     "styled-components": "5.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
     "@babel/preset-typescript": "^7.10.4",
+    "@storybook/addon-actions": "^6.0.26",
+    "@storybook/addon-essentials": "^6.0.26",
+    "@storybook/addon-knobs": "^6.0.26",
+    "@storybook/addon-links": "^6.0.26",
+    "@storybook/react": "^6.0.26",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
     "@types/jest": "^26.0.14",
@@ -37,6 +45,7 @@
     "@types/styled-components": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
@@ -45,8 +54,10 @@
     "eslint-plugin-react-hooks": "^4.1.0",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
+    "jest-styled-components": "^7.0.3",
     "lint-staged": "^10.4.0",
     "prettier": "2.1.2",
+    "react-is": "^17.0.0",
     "typescript": "^4.0.2"
   }
 }
