--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "next": "9.5.3",
+    "next-pwa": "^3.1.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "5.1.1"
@@ -32,10 +33,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-typescript": "^7.10.4",
-    "@storybook/addon-actions": "^6.0.26",
     "@storybook/addon-essentials": "^6.0.26",
-    "@storybook/addon-knobs": "^6.0.26",
-    "@storybook/addon-links": "^6.0.26",
     "@storybook/react": "^6.0.26",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
