--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "test:watch": "yarn test --watch",
     "generate": "yarn plop --plopfile ./generators/plopfile.js",
     "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook -s ./public"
+    "build-storybook": "build-storybook -s ./public",
+    "release": "standard-version",
+    "release:minor": "standard-version --release-as minor",
+    "release:patch": "standard-version --release-as patch",
+    "release:major": "standard-version --release-as major",
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
@@ -26,17 +31,20 @@
   },
   "dependencies": {
     "next": "11.1.2",
-    "next-pwa": "^5.0.0",
+    "next-pwa": "^5.3.1",
+    "polished": "^4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "5.3.1"
+    "styled-components": "5.3.1",
+    "styled-icons": "^10.43.0",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
-    "@babel/preset-typescript": "^7.10.4",
+    "@babel/preset-typescript": "^7.15.0",
     "@storybook/addon-essentials": "^6.3.8",
     "@storybook/react": "^6.3.8",
-    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.1",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.2",
@@ -45,19 +53,21 @@
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "babel-loader": "^8.2.1",
-    "babel-plugin-styled-components": "^1.11.1",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^8.0.0",
+    "babel-plugin-styled-components": "^1.13.2",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.1.2",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.2",
     "jest": "^27.2.4",
-    "jest-styled-components": "^7.0.3",
-    "lint-staged": "^11.0.0",
+    "jest-styled-components": "^7.0.5",
+    "lint-staged": "^11.1.2",
     "plop": "^2.7.4",
     "prettier": "2.4.1",
-    "react-is": "^17.0.0",
+    "react-is": "^17.0.2",
+    "standard-version": "^9.3.1",
     "typescript": "^4.4.3"
   }
 }
