--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
   },
   "dependencies": {
     "next": "12.1.4",
-    "next-pwa": "^5.4.7",
-    "polished": "^4.2.2",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "next-pwa": "^5.4.6",
+    "polished": "^4.1.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-slick": "^0.28.1",
     "styled-components": "5.3.5",
     "styled-icons": "^10.45.0",
     "styled-media-query": "^2.1.2"
