--- a/package.json
+++ b/package.json
@@ -70,5 +70,8 @@
     "react-is": "^18.1.0",
     "standard-version": "^9.5.0",
     "typescript": "^4.6.4"
+  },
+  "overrides": {
+    "@babel/types@7.18.0": "7.17.12"
   }
 }
