--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
   "devDependencies": {
     "@babel/core": "^7.18.0",
     "@babel/preset-typescript": "^7.17.12",
-    "@storybook/addon-essentials": "^6.5.3",
-    "@storybook/react": "^6.5.3",
+    "@storybook/addon-essentials": "^6.5.4",
+    "@storybook/react": "^6.5.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@types/jest": "^27.5.1",
@@ -60,6 +60,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-storybook": "^0.5.12",
     "husky": "^8.0.1",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
